# ml-template

./: CLAUDE.md  README.md  claude-code-multi-model-setup.md  dangerously-skip-permissions.md  index.html  pyproject.toml
.claude/: settings.json  settings.local.json  settings1.json
.claude/agents/: data-cleaner.md  reporter.md  statistician.md  (+1 more)
_archive/: PROMPT.md  THE_MOVIE.md  analytics_report.md  kaggle_spec_superstore.md  lesson01.md  movie.md  test.md  webpage_plan.md
_ideas/: THE_MOVIE.md  webpage.css  webpage.md
_plans/: kaggle_plan.md
_specs/: kaggle_specs.md  webpage_specs.md
docs/: claude-code-multi-model-setup.md  context-window-limits.txt  git-origin.md  git-remove-tags.md
logs/: .session_starts.json  conversation.json  rsi_20260319_173312.md  rsi_20260320_072520.md  session_20260319_170729_d1b66315.csv  session_20260319_171231_8351eff3.csv  session_20260319_171729_69ecdd96.csv  session_20260319_172441_57aaf60d.csv  session_20260320_064338_9d8bdb61.csv  session_20260320_065219_743e6d20.csv  session_20260320_071834_fda6fce0.csv  session_20260320_072242_d4dc526b.csv  session_20260320_084610_c4f62d97.csv  session_20260320_164556_f3b11829.csv  session_20260324_141712_c52fc101.csv  status_line.json
output/: answer_sales_drop_causes.md
rsi/: rsi_plan.md
src/: 01_audit.py  02_clean.py  03_eda.py  04_stats.py  05_report.py  dashboard.py  data_science_detective_agency.py  lesson01_app copy.py  lesson01_app.py  movie_launcher.py  movie_scene1.html  movie_scene2.html  phase1_etl.py  phase2_eda.py  phase3_charts.py  phase4_report.py  readme_to_pdf.py
(+56 files in other folders)
