[project]
name = "neuroblastoma-genomic-analysis"
version = "0.1.0"
description = "Multi-phase oncology data science project predicting neuroblastoma patient outcomes from gene expression and clinical data."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fpdf2>=2.8.7",
    "lifelines>=0.30.0",
    "markdown2>=2.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "plotly>=6.5.2",
    "reportlab>=4.4.10",
    "scikit-learn>=1.6.0",
    "scipy>=1.17.1",
    "seaborn>=0.13.2",
    "shiny>=1.5.1",
    "shinywidgets>=0.7.1",
    "statsmodels>=0.14.6",
    "xgboost>=2.1.0",
]
